--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -15,24 +15,46 @@ services:
     container_name: kafka
     ports:
       - "9092:9092"
-      - "9093:9093"  # Additional port for the second listener
+      - "9093:9093"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+
+      # Listeners
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,PLAINTEXT_HOST://0.0.0.0:9093
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+
+      # Topic creation and retention
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
+      KAFKA_LOG_RETENTION_MS: '1800000'  # 30 minutes
+      KAFKA_OFFSET_RETENTION_MINUTES: '30'
+
+      # Internal topic replication settings (for single-broker clusters)
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+
     depends_on:
       - zookeeper
+
     volumes:
-      - ./create-topics.sh:/scripts/create-topics.sh
+      - ./create-topics.sh:/scripts/create-topics.sh:ro
+
     command: >
       sh -c "
-        /etc/confluent/docker/run &
-        sleep 15
-        chmod +x /scripts/create-topics.sh
-        /scripts/create-topics.sh
+        /etc/confluent/docker/run & 
+        sleep 15 && 
+        /scripts/create-topics.sh && 
         wait
       "
+
+  # kafdrop:
+  #   image: obsidiandynamics/kafdrop
+  #   ports:
+  #     - "9000:9000"
+  #   environment:
+  #     KAFKA_BROKER_CONNECT: kafka:9092
+  #   depends_on:
+  #     - kafka
