--- a/banyan_nexus/docker-compose.yml
+++ b/banyan_nexus/docker-compose.yml
@@ -49,3 +49,19 @@ services:
         /scripts/create-topics.sh && 
         wait
       "
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.13.4
+    container_name: elasticsearch
+    ports:
+      - "9200:9200"
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+    networks:
+      - default
+
+volumes:
+  esdata:
