--- a/deployments/k8s/kafka-deployment.yaml
+++ b/deployments/k8s/kafka-deployment.yaml
@@ -13,13 +13,48 @@ spec:
         app: kafka
     spec:
       imagePullSecrets:
-      - name: ecr-creds
+        - name: ecr-creds
+      volumes:
+        - name: topic-script
+          configMap:
+            name: kafka-topic-script
+        - name: scripts
+          emptyDir: {}
+      initContainers:
+        - name: init-create-topics
+          image: confluentinc/cp-kafka:7.4.4
+          command: ["/bin/bash", "-c"]
+          args:
+            - |
+              cp /config/create-topics.sh /scripts/create-topics.sh && \
+              chmod +x /scripts/create-topics.sh && \
+              /scripts/create-topics.sh
+          volumeMounts:
+            - name: topic-script
+              mountPath: /config
+            - name: scripts
+              mountPath: /scripts
+          env:
+            - name: KAFKA_BROKER_ID
+              value: "1"
+            - name: KAFKA_ZOOKEEPER_CONNECT
+              value: "zookeeper:2181"
       containers:
         - name: kafka
           image: confluentinc/cp-kafka:7.4.4
           ports:
             - containerPort: 9092
             - containerPort: 9093
+          livenessProbe:
+            tcpSocket:
+              port: 9092
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+            tcpSocket:
+              port: 9092
+            initialDelaySeconds: 10
+            periodSeconds: 5
           env:
             - name: KAFKA_BROKER_ID
               value: "1"
@@ -38,7 +73,7 @@ spec:
             - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
               value: "1"
             - name: KAFKA_LOG_RETENTION_MS
-              value: "1800000"  # 30 minutes
+              value: "1800000"
             - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
               value: "1"
             - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
