--- a/deployments/k8s/kafka-deployment.yaml
+++ b/deployments/k8s/kafka-deployment.yaml
@@ -56,14 +56,22 @@ spec:
             initialDelaySeconds: 10
             periodSeconds: 5
           env:
+            - name: POD_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
             - name: KAFKA_BROKER_ID
               value: "1"
             - name: KAFKA_ZOOKEEPER_CONNECT
               value: "zookeeper:2181"
             - name: KAFKA_LISTENERS
-              value: PLAINTEXT://0.0.0.0:9092,PLAINTEXT_HOST://0.0.0.0:9093
+              value: PLAINTEXT://0.0.0.0:9092
             - name: KAFKA_ADVERTISED_LISTENERS
-              value: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:9093
+              value: PLAINTEXT://$(POD_IP):9092
+            - name: POD_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
             - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
               value: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
             - name: KAFKA_INTER_BROKER_LISTENER_NAME
