fix: update zookeeper deployment manifest - updated zookeeper-deployment.yaml - updated zookeeper-serivce.yaml

--- a/deployments/k8s/zookeeper-service.yaml
+++ b/deployments/k8s/zookeeper-service.yaml
@@ -1,12 +1,11 @@
+# zookeeper-service.yaml
 apiVersion: v1
 kind: Service
 metadata:
   name: zookeeper
 spec:
+  ports:
+  - port: 2181
+    targetPort: 2181
   selector:
     app: zookeeper
-  ports:
-    - name: client
-      port: 2181
-      targetPort: 2181
-  type: ClusterIP
