--- a/deployments/k8s/sap-streamer-service.yaml
+++ b/deployments/k8s/sap-streamer-service.yaml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: sap-streamer
 spec:
+  type: NodePort
   selector:
     app: sap-streamer
   ports:
     - name: http
       port: 3000
       targetPort: 3000
-  type: ClusterIP
+      nodePort: 31000
