--- a/deployments/k8s/raft-node-statefulset.yaml
+++ b/deployments/k8s/raft-node-statefulset.yaml
@@ -19,6 +19,7 @@ spec:
       containers:
         - name: raft-node
           image: 777064612419.dkr.ecr.us-east-2.amazonaws.com/banyantree:raft-node
+          imagePullPolicy: Always
           ports:
             - containerPort: 8000
               name: http
@@ -29,6 +30,8 @@ spec:
                   fieldPath: metadata.name
             - name: NODE_PORT
               value: "8000"
+            - name: KAFKA_BOOTSTRAP_SERVERS
+              value: "kafka:9092"
           volumeMounts:
             - name: raft-data
               mountPath: /data
