--- a/deployments/k8s/rootkeeper-service.yaml
+++ b/deployments/k8s/rootkeeper-service.yaml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: rootkeeper
 spec:
+  type: NodePort
   selector:
     app: rootkeeper
   ports:
     - name: http
       port: 8000
       targetPort: 8000
-  type: ClusterIP
+      nodePort: 30081 
